SnoOne 2021: integration testing